testsuite/tests/typecheck/should_fail/all.T

test('tcfail001', normal, compile_fail, ['-Wall -Werror'])
